# CloudSRE

./: .gitignore  BLOG_POST.md  CURSOR_CONTEXT.md  CloudSRE_Training.ipynb  CloudSRE_Training_Colab.ipynb  CloudSRE_Training_Colab.py  Dockerfile  Dockerfile.service  JUDGES_START_HERE.md  README.md  __init__.py  blog.md  client.py  comprehensive_test.py  dashboard.py  debug_resolution.py  debug_resolution2.py  debug_status.py  diag_colab_hf.py  docker-compose.yml  e2e_singleton_test.py  evaluate.py  evaluate_model.py  fix_imports.py  generate_plots.py  generate_sft_data.py  grpo_training_log.json  inference.py  models.py  openenv.yaml  pyproject.toml  quick_adv_test.py  rebuild_notebook.py  sft_training_data.jsonl  sft_warmup.py  smoke_test.py  test.py  test_all_tiers.py  test_all_warmup.py  test_health.py  (+5 more)
data/: sft_training_data.jsonl  sft_training_data_v6services.jsonl
infra/: __init__.py  database.py  logger.py  metrics.py  queue.py
scripts/: generate_final_plots.py  generate_leg2_plots.py  generate_sft_data.py  rewrite_sft_prompts.py
server/: __init__.py  adversarial_designer.py  app.py  cloud_sre_environment.py  command_executor.py  constants.py  graders.py  judge.py  llm_client.py  llm_judge.py
services/: __init__.py  _service_worker.py  auth_service.py  base_service.py  billing_service.py  cache_service.py  config_service.py  dns_service.py  email_service.py  frontend_proxy.py  gateway_service.py  loadbalancer_service.py  metrics_collector_service.py  notification_service.py  orchestrator.py  payment_service.py  scheduler_service.py  search_service.py  (+2 more)
(+13 files in other folders)
